<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Finance Manager</string>
    <string name="expend">Expenses</string>
    <string name="earn">Income</string>
    <string name="transfer">Transfers</string>
    <string name="balanceShow">Balances</string>
    <string name="journalShow">Transaction Journal</string>
    <string name="menu_settings">Settings</string>
    <string name="amount">Enter amount</string>
    <string name="accountlabel">Select account:</string>
    <string name="categorylabel">Select category:</string>
    <string name="confirmbutton">Save</string>
    <string name="sourcelabel">Select source:</string>
    <string name="accountfromlabel">Transfer from account</string>
    <string name="accounttolabel">Transfer to account</string>
    <string name="currentamount">Current</string>
    <string name="main_subtitle">Welcome to PFM, select action:</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_expend">Expenses</string>
    <string name="title_activity_earn">Income</string>
    <string name="title_activity_transfer">Transfers</string>
    <string name="title_activity_balance">Current Balances</string>
    <string name="title_activity_journal">Transaction Journal</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_connection_test">ConnectionTest</string>
    <string name="title_activity_login">Login Prompt</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manage_category">Manage Categories</string>

</resources>