<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewEx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/accountlabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerEx1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/textViewEx1"
        android:layout_below="@+id/textViewEx1" />

    <EditText
        android:id="@+id/editTextEx2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerEx1"
        android:layout_below="@+id/spinnerEx1"
        android:layout_marginTop="24dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/amount" />

    <TextView
        android:id="@+id/textViewEx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEx2"
        android:layout_below="@+id/editTextEx2"
        android:layout_marginTop="24dp"
        android:text="@string/categorylabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerEx2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textViewEx2"
        android:layout_below="@+id/textViewEx2" />

    <Button
        android:id="@+id/buttonEx1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/spinnerEx2"
        android:layout_alignRight="@+id/spinnerEx3"
        android:text="@string/confirmbutton"
        android:onClick="returnBack" />

    <Spinner
        android:id="@+id/spinnerEx3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_above="@+id/editTextEx2"
        android:layout_toRightOf="@+id/spinnerEx1"
        android:layout_alignBaseline="@+id/spinnerEx1" />

    <TextView
        android:id="@+id/textViewEx3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_alignBaseline="@+id/editTextEx2"
        android:layout_alignBottom="@+id/editTextEx2"
        android:layout_toRightOf="@+id/editTextEx2"
        android:text="@string/currentamount" />

</RelativeLayout>