<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewEa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/accountlabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerEa1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/textViewEa1"
        android:layout_below="@+id/textViewEa1" />

    <EditText
        android:id="@+id/editTextEa2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerEa1"
        android:layout_below="@+id/spinnerEa1"
        android:layout_marginTop="24dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/amount" />

    <TextView
        android:id="@+id/textViewEa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextEa2"
        android:layout_below="@+id/editTextEa2"
        android:layout_marginTop="24dp"
        android:text="@string/sourcelabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spinnerEa2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textViewEa2"
        android:layout_below="@+id/textViewEa2" />

    <Button
        android:id="@+id/buttonEa1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/spinnerEa2"
        android:layout_alignRight="@+id/spinnerEa3"
        android:text="@string/confirmbutton"
        android:onClick="returnBack" />
    
    <Spinner
        android:id="@+id/spinnerEa3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_above="@+id/editTextEa2"
        android:layout_toRightOf="@+id/spinnerEa1"
        android:layout_alignBaseline="@+id/spinnerEa1" />
    
    <TextView
        android:id="@+id/textViewEa3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_alignBaseline="@+id/editTextEa2"
        android:layout_alignBottom="@+id/editTextEa2"
        android:layout_toRightOf="@+id/editTextEa2"
        android:text="@string/currentamount" />

</RelativeLayout>
